manifests/app/recomsys/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: bench
   labels:
     istio-injection: enabled
