manifests/app/recomsys/deployment-userresource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recomsys-user-resource
  namespace: bench
  labels:
    app: userresource
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userresource
  template:
    metadata:
      labels:
        app: userresource
    spec:
      serviceAccountName: default-editor
      containers:
      - name: main
        image: footprintai/recomsys:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 2
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 8080
        command: ["/bin/sh"]
        args: 
          - -c
          - >-
              python
              userresource/main.py
