manifests/app/recomsys/service-inference.yaml
apiVersion: v1
kind: Service
metadata:
  name: recomsys-inference-service
  namespace: bench
  labels:
    app: recomsys
    monitoring: enabled
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 50999
      protocol: TCP
      name: http-metrics
  selector:
    app: inference
