manifests/app/recomsys/service-userresource.yaml
apiVersion: v1
kind: Service
metadata:
  name: recomsys-userresource-service
  namespace: recomsys
  labels:
    app: userresource
    monitoring: enabled
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 50999
      protocol: TCP
      name: http-metrics
  selector:
    app: userresource
